# cookiecutter-pyproject

./: .pre-commit-config.yaml  AUTHORS.rst  LICENSE  Makefile  README.rst  cookiecutter.json  pyproject.toml
hooks/: post_gen_project.py
{{cookiecutter.project_dist_name}}/: .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  LICENSE  Makefile  README.rst  pyproject.toml
{{cookiecutter.project_dist_name}}/docs/: conf.py  index.rst  installation.rst
{{cookiecutter.project_dist_name}}/tests/: test_{{cookiecutter.project_import_name}}.py
